Fix My Quizzes layout so that content is properly centered
Will need to tweak the sidebar width when the screen width is just below the screen-lg breakpoint (sidebar is too narrow at that point). May be possible to remedy this by adjusting the value of @screen-lg by downloading a customized version of Bootstrap:

http://getbootstrap.com/customize/

--- a/client/styles/myQuizzes.less
+++ b/client/styles/myQuizzes.less
@@ -71,7 +71,6 @@
 }
 
 .topics-sidebar {
-    max-width: 300px;
 
     .nav > li > .topic-nav-item {
         padding: 10px 15px 10px 5px;    // Decrease left padding a bit
